--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./dist/style.css">
+  <title>Blog preview card</title>
+
+
 </head>
+
 <body>
+  <main class="container">
+    <div class="card">
 
-  Learning
+      <img src=" ./assets/images/illustration-article.svg" alt="illustration-article">
+      <div class="card__subtitle"> Learning </div>
 
-  Published 21 Dec 2023
+      <div class="card__date">Published 21 Dec 2023</div>
 
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <div class="card__title">
+        HTML & CSS foundations
+      </div>
+      <div class="card__description">
+        These languages are the backbone of every website, defining structure , content, and presentation
+      </div>
+      <div class="card__profile">
+        <img src="./assets/images/image-avatar.webp" alt="profile image">
+        Greg Hoope
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
