changed animation speed and border radius

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <main class="container">
-    <div class="card">
+    <section class="card">
 
       <img src=" ./assets/images/illustration-article.svg" alt="illustration-article">
       <div class="card__subtitle"> Learning </div>
@@ -33,7 +33,7 @@
         <img src="./assets/images/image-avatar.webp" alt="profile image">
         Greg Hoope
       </div>
-    </div>
+    </section>
   </main>
 </body>
 
